--- a/1.html
+++ b/1.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./1.css">
+    <link rel="stylesheet" href="./login.css">
+    <link rel="stylesheet" href="./order.css">
 </head>
 <body>
     <div class="supr">我是超人</div>
     <div class="login">我是登录页面!!</div>
+    <div class="order">权限页面</div>
 </body>
 </html>
